// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tic-Tac-Toe/Square Circle 1`] = `
<button
  className="square"
>
  半
</button>
`;

exports[`Storyshots Tic-Tac-Toe/Square Cross 1`] = `
<button
  className="square"
>
  丁
</button>
`;

exports[`Storyshots Tic-Tac-Toe/Square Triangle 1`] = `
<button
  className="square"
>
  △
</button>
`;

exports[`Storyshots Tic-Tac-Toe/Square Usual 1`] = `
<button
  className="square"
/>
`;
